log
Thu 20 Apr 2023 09:44:21 PM UTC: 
 tests:  1|8
total_score: 0/70
15a8432
Fri 21 Apr 2023 01:10:04 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createTreeMap’:
treemap.c:44:25: error: ‘new’ is used uninitialized [-Werror=uninitialized]
   44 |   tree->lower_than = new->lower_than;
      |                      ~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
15653d9
Fri 21 Apr 2023 01:11:04 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|8
total_score: 0/70
dab2c2d
Fri 21 Apr 2023 01:11:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
1c5810d
Fri 21 Apr 2023 02:17:15 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5052845
Fri 21 Apr 2023 02:18:09 AM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
af77089
Fri 21 Apr 2023 02:27:54 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a031f23
Fri 21 Apr 2023 01:02:11 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  4|7
total_score: 5/70
857809c
Fri 21 Apr 2023 01:11:59 PM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++------
 1 file changed, 32 insertions(+), 6 deletions(-)
 tests:  3|7
total_score: 5/70
0526acb
Fri 21 Apr 2023 01:16:31 PM UTC: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
f3c3ab1
Fri 21 Apr 2023 01:17:05 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
c175036
Fri 21 Apr 2023 01:17:36 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|6
total_score: 15/70
fc9316b
Fri 21 Apr 2023 01:31:28 PM UTC: 
 treemap.c | 33 ++++++++++++++++++++++-----------
 1 file changed, 22 insertions(+), 11 deletions(-)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:51:15: error: ‘aux’ is used uninitialized [-Werror=uninitialized]
   51 |   aux->parent = tree->root;
      |   ~~~~~~~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ceafc6a
Fri 21 Apr 2023 01:32:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
8b71c9e
Fri 21 Apr 2023 01:32:35 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|6
total_score: 15/70
16b1b0a
Sat 22 Apr 2023 09:29:29 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
4a4b123
Sat 22 Apr 2023 09:32:38 PM UTC: 
 treemap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  10|6
total_score: 15/70
b761e0f
Sat 22 Apr 2023 09:35:12 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  10|6
total_score: 15/70
627258b
Sat 22 Apr 2023 09:46:44 PM UTC: 
 treemap.c | 34 +++++++++++++++++++---------------
 1 file changed, 19 insertions(+), 15 deletions(-)
 tests:  10|6
total_score: 15/70
3969cea
Sat 22 Apr 2023 09:49:28 PM UTC: 
 treemap.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|0
6091bde
Sat 22 Apr 2023 09:53:29 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
669834f
Sat 22 Apr 2023 09:57:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:16: error: ‘*auxParent.pair’ may be used uninitialized [-Werror=maybe-uninitialized]
   59 |       auxParent->pair->key = tree->current->pair->key;
      |       ~~~~~~~~~^~~~~~
treemap.c:78:41: error: ‘*auxParent.pair’ may be used uninitialized [-Werror=maybe-uninitialized]
   78 |   else if(tree->lower_than(key,auxParent->pair->key))
      |                                ~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
90a91a3
Sat 22 Apr 2023 10:00:53 PM UTC: 
 treemap.c | 50 +++++++++++++++++---------------------------------
 1 file changed, 17 insertions(+), 33 deletions(-)
 tests:  10|6
total_score: 15/70
f0433f1
Sat 22 Apr 2023 10:01:40 PM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  10|6
total_score: 15/70
8ad0e53
Sat 22 Apr 2023 10:04:45 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  12|5
total_score: 15/70
8e6570b
Sat 22 Apr 2023 10:05:04 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8507770
Sat 22 Apr 2023 10:05:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
a3ac20c
Sat 22 Apr 2023 10:05:25 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
5d298de
Sat 22 Apr 2023 10:13:37 PM UTC: 
 treemap.c | 65 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 64 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:131:13: error: ‘TreeNode’ has no member named ‘key’
  131 |         node->key = successor->key;
      |             ^~
treemap.c:131:30: error: ‘TreeNode’ has no member named ‘key’
  131 |         node->key = successor->key;
      |                              ^~
treemap.c:138:32: error: implicit declaration of function ‘findParent’ [-Werror=implicit-function-declaration]
  138 |             TreeNode* parent = findParent(tree->root, node);
      |                                ^~~~~~~~~~
treemap.c:138:32: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
de810d1
